Spacing fix

--- a/src/components/Note/NoteFooter/NoteFooter.module.scss
+++ b/src/components/Note/NoteFooter/NoteFooter.module.scss
@@ -16,6 +16,7 @@
     border: none;
     background-color: unset;
     width: auto;
+    min-width: 64px;
     &.highlighted {
       &.zapType {
         .statNumber {
@@ -89,7 +90,7 @@
     width: auto;
 
     .stat{
-      margin-right: 20px;
+      margin-right: 6px;
     }
   }
 }
